[project]
name = "fact-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.0",
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.3.4",
    "lxml>=5.4.0",
    "requests>=2.31.0",
    "scrapy>=2.13.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
